06_rect/grade.txt
Grading at Tue Sep 29 10:06:25 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:61:96: error: ‘rectangle {aka struct rectangle}’ has no member named ‘heitht’
   if((r1.x>=r2.x+r2.width) || (r1.y>=r2.y+r2.height) || (r2.x>=r1.x+r1.width) || (r2.y>=r1.y+r1.heitht))
                                                                                                ^
The code did not compile!

Overall Grade: F
